# api-ai

./: .gitignore  api-ai.cabal  stack.yaml
src/Data/Aeson/: Sparse.hs
src/Servant/API/: JSONUtf8.hs
src/Web/: ApiAi.hs
src/Web/ApiAi/: API.hs  Data.hs  Requests.hs  Responses.hs
src/Web/ApiAi/API/: Core.hs  Entities.hs  Query.hs
src/Web/ApiAi/Data/: Core.hs  Entities.hs  Intents.hs  Messages.hs  Query.hs
src/Web/ApiAi/Requests/: Query.hs
src/Web/ApiAi/Responses/: Core.hs  Query.hs
